added user api's and need to test those api's
