# swagger.yml
@@ -450,22 +450,11 @@ components:
           type: string
         phone_verified:
           type: boolean
-        address:
-          type: string
-        address2:
-          type: string
-        city:
-          type: string
-        state:
-          type: string
-        country:
-          type: string
-        dob:
-          type: string
-        gender:
-          type: string
-        ip_address:
-          type: string
+        email_verified:
+          type: boolean
+        role_id:
+          description: String or object
+
     Roles:
       type: object
       required:
@@ -532,3 +521,33 @@ components:
           type: string
         pre_booking_price:
           type: string
+    User-address:
+      type: object
+      required:
+        - user_id
+        - address
+        - city
+        - state
+        - country
+      properties:
+        user_id:
+          description: String or object
+        home_phone:
+          type: string
+        created_date:
+          type: string
+          format: date
+        office_phone:
+          type: string
+        address:
+          type: string
+        address2:
+          type: string
+        city:
+          type: string
+        state:
+          type: string
+        country:
+          type: string
+        role_id:
+          description: String or object
